# gumpy

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  ecoli-test.py  gen_ref_pages.py  gumpy-tutorial.ipynb  index.html  mkdocs.yaml  objects.inv  requirements.txt  setup.cfg  setup.py  stacked-arrays-walkthrough.ipynb  test-gumpy.py  test.py  test_table_variants.ipynb
.github/workflows/: docs.yaml  pypi.yaml  tests.yaml
config/: NC_004148.2.gbk  TEST-DNA-no-overlap.gbk  TEST-DNA-no-revcomp.gbk  TEST-DNA.gbk  TEST-RNA-PRF.gbk  TEST-RNA-PRF2.gbk  TEST-RNA.gbk
docs/: gen_ref_pages.py
docs/source/: conf.py  index.rst  modules.rst
gumpy/: .genome.py.swp  VariantFile.py  __init__.py  difference.py  gene.py  genome.py  genome.py~  genotype.py  newgenome.py  old_gene.py  old_genome.py  variantfile.py
readme/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/difference/: index.html
reference/gene/: index.html
reference/genome/: index.html
reference/variantfile/: index.html
search/: search_index.json
tests/: conftest.py  test_gene.py  test_genome.py
tests/saves/: TEST-DNA-SEQ.npz  TEST-DNA.fasta  TEST-DNA.json
tests/test-cases/: 01.M2.bed  01.all.bed  01.fasta  01.vcf  01.vcf~  03.vcf  04.vcf  05.bed  05.vcf  TEST-DNA-2.vcf  TEST-DNA-3.vcf  TEST-DNA-4-no-revcomp.vcf  TEST-DNA-4.vcf  TEST-DNA-5.vcf  TEST-DNA-LONG.vcf  TEST-DNA-double-del.vcf  TEST-DNA-gene-overlap.vcf  TEST-DNA-no-overlap-snp.vcf  TEST-DNA.vcf  covid-test.vcf  minor-populations-revcomp.vcf  minor-populations-single-aa-snp.vcf  minor-populations.vcf  (+1 more)
(+8 files in other folders)
