[metadata]
name = gumpy
version = 1.0
author = Philip W Fowler
author_email = philip.fowler@ndm.ox.ac.uk
description = Genetics with Numpy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oxfordmmm/gumpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = University of Oxford, see LICENSE.md

[options]
package_dir =
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pysam
    biopython
    tqdm
    pytest
    pytest-cov
    pandas
    scipy
zip_safe = False
include_package_data = True
scripts = bin/gumpy-save-genome.py, bin/to_piezo_catalogue.py

[options.package_data]
mypkg = config/*.gbk, config/*.gbk.gz
